--- a/FastLink/FastLink/Views/Shared/_AdminDashboardLayout.cshtml
+++ b/FastLink/FastLink/Views/Shared/_AdminDashboardLayout.cshtml
@@ -124,7 +124,7 @@
   <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
-      <a href="/Admin/Index" class="logo d-flex align-items-center">
+      <a href="#" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
         <span class="d-none d-lg-block"> FastLink </span>
       </a>
@@ -193,7 +193,7 @@
       <li class="nav-item">
          <a class="nav-link collapsed" asp-controller="Admin" asp-action="ChangeLocation">
             <i class="bi bi-geo-alt"></i>
-          <span>Change Locations</span>
+          <span> Tracking IDs</span>
         </a>
       </li><!-- End Profile Page Nav -->
 
