--- a/FastLink/FastLink/Views/Admin/ChangeLocation.cshtml
+++ b/FastLink/FastLink/Views/Admin/ChangeLocation.cshtml
@@ -34,17 +34,21 @@
                                             <th hidden></th>
                                             <th >S/NO</th>
                                             <th >Client Name</th>
-                                            <th >Email</th>
+                                            @* <th >Email</th> *@
                                             @*<th scope="col">Phonenumber</th>
                                             <th scope="col">Address</th>*@
-                                            <th >Item Name</th>
-                                            <th >Item Weight</th>
+                                           @*  <th >Item Name</th>
+                                            <th >Item Weight</th> *@
                                             <th >First Location</th>
                                             @*<th scope="col"> City </th>*@
-                                            <th > Tracking ID</th>
-                                            <th > Current Location</th>
+                                            @* <th > Tracking ID</th>
+                                            <th > Current Location</th> *@
                                             <th > Date Generated</th>
-                                            <th > Actions </th>
+                                            <th > Track Details </th>
+                                            <th > Update </th>
+                                            <th > Pause </th>
+                                            <th > Delivered </th>
+                                            <th > Delete </th>
 
                                         </tr>
                                     </thead>
@@ -55,21 +59,54 @@
                                                 <th scope="row" hidden> </th>
                                                 <td>@count</td>
                                                 <td>@track.ClientName</td>
-                                                <td>@track.Email</td>
+                                               @*  <td>@track.Email</td> *@
                                                 @*<td>@track.Phonenumber</td>
                                                 <td>@track.Address</td>*@
-                                                <td>@track.ItemName</td>
-                                                <td>@track.ItemWeight</td>
+                                                @* <td>@track.ItemName</td>
+                                                <td>@track.ItemWeight</td> *@
                                                 <td>@track.CurrentLocation</td>
                                                @* <td>@track.CurrentCity</td>*@
-                                                <td>@track.TrackingID</td>
-                                                <td>@track.NewLocation</td>
+                                               @*  <td>@track.TrackingID</td>
+                                                <td>@track.NewLocation</td> *@
                                                 <td>@track.DateCreated.ToString("D")</td>
-                                                <td style="display: flex;">
+                                                <td> 
+                                                    <button class="btn btn-outline-success"
+                                                        type="button" style="margin: 5px;" onclick="GetTrackDetails('@track.TrackingID')">
+                                                        <i class="bi bi-eye"></i>
+                                                    </button> 
+                                                </td>
+                                                <td>
                                                     <button class="btn btn-outline-success" data-toggle="modal" data-target="#getLocationmodal"
                                                         type="button" style="margin: 5px;" onclick="GetLocationToUpdate('@track.Id', '@track.TrackingID')">
                                                         <i class="bi bi-pencil-square"></i>
                                                     </button>
+                                                </td>
+                                                <td>
+                                                    @if (track.IsPaused == true)
+                                                    {
+                                                        <button class="btn btn-outline-success" type="button" style="margin: 5px;" 
+                                                            onclick="removePause('@track.Id')">
+                                                            PAUSED
+                                                        </button>
+                                                    }else{
+                                                    <button class="btn btn-outline-success" data-toggle="modal" data-target="#pause_order"
+                                                            type="button" style="margin: 5px;" onclick="pauseTrackModal('@track.Id')">
+                                                        Pause
+                                                    </button>
+                                                    }
+                                                </td>
+                                                <td class="text-center">
+                                                    @if (track.IsDelivered == true)
+                                                    {
+                                                        <button class="btn btn-success" style="margin: 5px;"> Delivered</button>
+                                                    }else{
+                                                    <button class="btn btn-outline-success" type="button" style="margin: 5px;" 
+                                                        onclick="setToDeliveredTrack('@track.Id')">
+                                                            Set
+                                                    </button>
+                                                    }
+                                                </td>
+                                                <td>
                                                     <button class="btn btn-outline-success" data-toggle="modal" data-target="#delete_Track"
                                                     type="button" style="margin: 5px;" onclick="DeleteTrack('@track.Id')">
                                                         <i class="bi bi-trash"></i>
@@ -101,7 +138,7 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title"> <b> Update Current Location </b> </h5>
+                <h5 class="modal-title"> <b> Update Track Details </b> </h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -112,12 +149,21 @@
                         <label class="col-form-label"> New Location </label>
                         <input class="form-control" type="text" id="newLocation" required>
                     </div>
+
+                    <div class="col-sm-12">
+                        <label class="col-form-label"> Depature Date </label>
+                        <input class="form-control" type="date" id="departDate" required>
+                    </div>
+                    <div class="col-sm-12">
+                        <label class="col-form-label"> Arrival Date </label>
+                        <input class="form-control" type="date" id="arriveDate" required>
+                    </div>
                 </div>
 
                 <div class="col-sm-6 m-auto">
                     <div class="mt-3">
                         <button type="button" class="btn btn-outline-success d-block mx-auto px-4 py-2" 
-                            id="submit_Btn" style="border-radius: 20px;" onclick="ChangeLocation()"> Update Location </button>
+                            id="submit_Btn" style="border-radius: 20px;" onclick="ChangeLocation()"> Update Track Details </button>
                     </div>
                 </div>
             </div>
@@ -154,3 +200,51 @@
 </div>
 
 <!-- /Delete Modal -->
+<!-- Pause Modal -->
+
+<div class="modal fade" id="pause_order" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title"> <b> Pause Order </b> </h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p class="text-center">Are you sure you want to pause this order?</p>
+                <div class="modal-btn delete-action">
+                    <div class="row m-auto">
+                        <input class="form-control" hidden type="text" id="ps_Id">
+                        <div class="col-6">
+                            <a class="btn btn-outline-success rounded-pill p-2 d-block" onclick="PauseOrder()">Pause Order</a>
+                        </div>
+                        <div class="col-6">
+                            <a data-bs-dismiss="modal" aria-label="Close" class="btn btn-outline-success rounded-pill p-2 d-block">Cancel</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- /Pause Modal -->
+<!-- track details Modal -->
+<div class="modal fade" id="showLocation" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h6 class="modal-title"> <b> Goods/Consignment Status </b> </h6>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="mt-2" id="track_details">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- /Modal -->
