--- a/FastLink/FastLink/Views/Admin/ClientMessages.cshtml
+++ b/FastLink/FastLink/Views/Admin/ClientMessages.cshtml
@@ -54,7 +54,7 @@
                                             <td style="display: flex;">
                                                 <button class="btn btn-outline-success" data-toggle="modal" data-target="#getMsgModal"
                                                     type="button" style="margin: 5px; border-radius: 10px" onclick="GetMsg('@msg.Id')">
-                                                    <i class="bi bi-eye"></i> View
+                                                    <i class="bi bi-eye"></i>
                                                 </button>
                                             </td>
                                             <td>
